Version additions for NeoForge and Forge fixes